welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:3: error: illegal start of simple expression
  while (!(getX() ==6) && getY() == getMondeHauteur()-1)) {
                                                        ^